O quiz está de volta, mas em inglês